MODIFIED arms